Added a reset button and a score count

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
 	<main>
 		<h2>Instructions</h2>
 		<p><a name="Instructions"></a>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
-			<a name="Game"></a>
+		<a name="Game"></a>
+		<p class="Score">Current Score: </p>
+		<p id="CurrentScore">0</p>
+		<button id="PlayOn" type="button">Play Again</button>
+		<button id="ResetButton" type="button">Reset</button>
 
 		<div id="game-board" class="board clearfix">
 
